--- a/src/components/InfoAboutComponent/InfoAboutComponent.css
+++ b/src/components/InfoAboutComponent/InfoAboutComponent.css
@@ -1,6 +1,6 @@
 .info-about-section{
     background-color: var(--black15);
-    padding-top: 32px;
+    /* padding-top: 32px; */
     padding-bottom: 32px;
 }
 
