--- a/src/components/ProductCategoryComponent/ProductCategoryComponent.css
+++ b/src/components/ProductCategoryComponent/ProductCategoryComponent.css
@@ -22,6 +22,7 @@
     align-items: center;
     gap: 32px;
     flex-basis: calc(20% - 52.5px);
+    transition: transform 0.3s ease; 
 }
 
 .product-category-card h5{
@@ -30,4 +31,11 @@
     font-weight: 600;
     color: var(--white-color);
     text-align: center;
+}
+
+  /* ===========================
+   Hover effect for the login button
+   =========================== */
+.product-category-card:hover {
+    transform: translateY(-10px);
 }
