--- a/src/components/ProductCardComponent/ProductCardComponent.css
+++ b/src/components/ProductCardComponent/ProductCardComponent.css
@@ -59,7 +59,7 @@
 }
 
 @media(max-width: 992px){
-    .product-card{
-        max-width: 100%;
+    .product-card-border{
+        min-width: 200px;
     }
 }
