--- a/src/components/ProductsComponent/ProductsComponent.css
+++ b/src/components/ProductsComponent/ProductsComponent.css
@@ -40,4 +40,8 @@
     .products-section .product-cards{
       overflow-x: scroll;
     }
+
+    .products-section .products-show-more{
+        display: none;
+    }
 }
