--- a/src/components/StudyCardsComponent/StudyCardsComponent.css
+++ b/src/components/StudyCardsComponent/StudyCardsComponent.css
@@ -12,3 +12,11 @@
     justify-content: stretch;
     align-items: stretch;
 }
+
+
+@media(max-width: 992px){
+    .study-cards{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
