--- a/src/components/EventsComponent/EventsComponent.css
+++ b/src/components/EventsComponent/EventsComponent.css
@@ -34,3 +34,12 @@
     width: 10.0609%;
     text-align: center;
 }
+
+@media(max-width: 992px){
+    .events-section .event-cards{
+      overflow-x: scroll;
+    }
+    .events-section .events-show-more{
+        display: none;
+    }
+}
