--- a/src/components/HeroComponent/HeroComponent.css
+++ b/src/components/HeroComponent/HeroComponent.css
@@ -51,3 +51,9 @@
   button:hover {
     background-color: #0056b3;
   } */
+
+  @media(max-width: 992px){
+    .hero{
+        display: none;
+    }
+}
