--- a/src/components/QualityComponent/QualityComponent.css
+++ b/src/components/QualityComponent/QualityComponent.css
@@ -65,7 +65,7 @@
 }
 
 .quality-sec .card-quality-sec .right-side a{
-    color: var(--grey03);
+    color: var(--grfaey03);
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
@@ -74,4 +74,18 @@
     border: 1px solid var(--gold26);
     border-radius: 999px;
     background-color: var(--black17);
+}
+
+@media(max-width: 992px){
+    .quality-sec .card-quality-sec{
+        flex-wrap: wrap;
+        align-items: start;
+        justify-content: start;
+    }
+
+    .quality-sec .card-quality-sec .left-side .factory-image{
+        height: 100%;
+        max-width: 100%;
+        width: 100%;
+    }
 }
