--- a/src/components/StudyCardComponent/StudyCardComponent.css
+++ b/src/components/StudyCardComponent/StudyCardComponent.css
@@ -58,3 +58,9 @@
     border-bottom: 3px solid var(--gold26);
     margin: auto;
 }
+
+@media(max-width: 992px){
+    .study-card{
+        min-width: 100%;
+    }
+}
