--- a/src/components/MateBenifitComponent/MateBenifitComponent.css
+++ b/src/components/MateBenifitComponent/MateBenifitComponent.css
@@ -42,3 +42,12 @@
     color: var(--grey03);
     padding-bottom: 5px;
 }
+
+@media(max-width: 992px){
+    .mate-benifit .left-side img{
+        width: 100%;
+        max-width: 100%;
+        height: 100%;
+        max-height: 100%;
+    }
+}
