--- a/src/components/TitleComponent/TitleComponent.css
+++ b/src/components/TitleComponent/TitleComponent.css
@@ -25,3 +25,11 @@
     text-align: center;
 }
 
+@media(max-width: 992px){
+    .AA-title-heading{
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 30px;
+    }
+}
+
