--- a/src/components/ProductImageComponent/ProductImageComponent.css
+++ b/src/components/ProductImageComponent/ProductImageComponent.css
@@ -8,7 +8,7 @@
      =========================== */
   .MainImage {
     width: 100%; 
-    min-height: 470px; 
+    /* min-height: 470px;  */
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
     margin-bottom: 20px; 
