--- a/src/components/LanguageDropdown/LanguageDropdown.css
+++ b/src/components/LanguageDropdown/LanguageDropdown.css
@@ -17,24 +17,36 @@
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
+  background-color: var(--black01);
+  border-radius: 8px;
   list-style-type: none;
-  padding: 0;
+  padding: 8px;
   margin: 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+.dropdown-menu .arabic {
+  right: 0;
+}
+
+
 .dropdown-menu li {
-  padding: 10px;
+  padding: 13.5px 8px;
 }
 
 .dropdown-menu li a {
   text-decoration: none;
-  color: #333;
+  color: var(--white-color);
   display: block;
+  display: flex;
+  gap: 8px;
+  cursor: pointer;
+
+  img{
+    width: 25px;
+    height: 25px;
+  }
 }
 
-.dropdown-menu li a:hover {
-  background-color: #f0f0f0;
-}
+
+
