--- a/src/components/LayoutProductComponent/LayoutProductComponent.css
+++ b/src/components/LayoutProductComponent/LayoutProductComponent.css
@@ -7,8 +7,7 @@
 
 .layout-product .product-cards {
     flex: 1;
-    display: grid;
-    grid-template-columns: auto auto auto;
+    display: flex;
     gap: 16px;
     justify-content: center;  
     background-color: #191917;
@@ -27,7 +26,7 @@
         flex-wrap: wrap;
     }
     .layout-product .product-cards {
-        grid-template-columns: 100%;
+        flex-wrap: wrap;
     }
 
     .layout-product .product-cards-braadcrumb{
