--- a/src/components/StudyCardComponent/StudyCardComponent.css
+++ b/src/components/StudyCardComponent/StudyCardComponent.css
@@ -12,7 +12,7 @@
     line-height: 24px;
     letter-spacing: 0;
     color: var(--greyb4);
-    text-align: end;
+    text-align: center;
 }
 
 .study-card h3{
