--- a/src/components/LanguageDropdown/LanguageDropdown.css
+++ b/src/components/LanguageDropdown/LanguageDropdown.css
@@ -14,15 +14,16 @@
 }
 
 .dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: var(--black01);
-  border-radius: 8px;
-  list-style-type: none;
-  padding: 8px;
-  margin: 0;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: var(--black01);
+    border-radius: 8px;
+    list-style-type: none;
+    padding: 8px;
+    margin: 0;
+    box-shadow: 0 2px 4px rgba(211, 147, 38, 0.5);
 }
 
 .dropdown-menu .arabic {
