--- a/src/components/LayoutProductComponent/LayoutProductComponent.css
+++ b/src/components/LayoutProductComponent/LayoutProductComponent.css
@@ -6,11 +6,15 @@
 }
 
 .layout-product .product-cards {
-    flex: 1;
     display: flex;
     gap: 16px;
     justify-content: center;  
     background-color: #191917;
+    flex-wrap: wrap;
+}
+
+.layout-product .product-cards .product-card-border{
+    flex-basis: calc(33.33% - 16px) !important;
 }
 
 .layout-product .product-cards-braadcrumb{
@@ -21,12 +25,22 @@
     flex: 1;
 }
 
+@media (max-width: 1200px){
+    .layout-product .product-cards .product-card-border{
+        flex-basis: 50% !important;
+    }
+}
+
 @media (max-width: 992px){
     .layout-product{
         flex-wrap: wrap;
     }
     .layout-product .product-cards {
         flex-wrap: wrap;
+    }
+
+    .layout-product .product-cards .product-card-border{
+        flex-basis: 100% !important;
     }
 
     .layout-product .product-cards-braadcrumb{
