--- a/src/components/ScrollToTop/ScrollToTop.css
+++ b/src/components/ScrollToTop/ScrollToTop.css
@@ -1,7 +1,6 @@
 .scroll-to-top {
   position: fixed;
   bottom: 20px;
-  right: 20px;
   width: 45px;
   height: 45px;
   border-radius: 50%;
@@ -19,6 +18,14 @@
   z-index: 999;
 }
 
+.scroll-to-top-right{
+  left: 15px;
+}
+
+.scroll-to-top-left{
+  right: 15px;
+}
+
 .Scroll-show {
   opacity: 1;
   visibility: visible;
@@ -29,8 +36,15 @@
   .scroll-to-top {
     font-size: 18px;
     bottom: 15px;
-    right: 15px;
     width: 40px;
     height: 40px;
+  }
+
+  .scroll-to-top-right{
+    left: 10px;
+  }
+
+  .scroll-to-top-left{
+    right: 10px;
   }
 }
