--- a/src/components/ProductDescriptionComponent/ProductDescriptionComponent.css
+++ b/src/components/ProductDescriptionComponent/ProductDescriptionComponent.css
@@ -117,8 +117,8 @@
          Subsection: Ingredient Image
          =========================== */
       .product-ingredient-img {
-        max-width: 432px; 
-        max-height: 432px;
+        /* max-width: 432px; 
+        max-height: 432px; */
         width: 100%; 
         height: 100%; 
       }
