--- a/src/components/ProductImageComponent/ProductImageComponent.css
+++ b/src/components/ProductImageComponent/ProductImageComponent.css
@@ -1,7 +1,7 @@
 .image-slider-container {
   max-width: 638px;
   width: 100%; 
-  margin: 0 auto; 
+  /* margin: 0 auto;  */
 
   /* ===========================
      Subsection: Main Image
