--- a/src/components/ProductsComponent/ProductsComponent.css
+++ b/src/components/ProductsComponent/ProductsComponent.css
@@ -18,6 +18,10 @@
     gap: 16px;
 }
 
+.products-section .product-cards .product-card-border {
+    flex-basis: calc(25% - 16px);
+}
+
 .products-section .products-show-more{
     display: flex;
     align-items: center;
