--- a/src/components/ProductCardComponent/ProductCardComponent.css
+++ b/src/components/ProductCardComponent/ProductCardComponent.css
@@ -48,8 +48,8 @@
 .product-card h5{
     color: var(--gold26);
     font-weight: 600;
-    font-size: 28px;
-    line-height: 33.6px;
+    font-size: 32px;
+    line-height: 38.4px;
     letter-spacing: 0;
 }
 
@@ -57,8 +57,8 @@
 .product-card .btn-comp{
     color: var(--greyb4);
     font-weight: 400;
-    font-size: 14px;
-    line-height: 21px;
+    font-size: 16px;
+    line-height: 24px;
     letter-spacing: 0;
 }
 
@@ -66,8 +66,32 @@
     margin-top: auto
 }
 
+@media(max-width: 1919px){
+    .product-card h5{
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .product-card p,
+    .product-card .btn-comp{
+        font-size: 14px;
+        line-height: 21px;
+    }
+}
+
 @media(max-width: 992px){
     .product-card-border{
         min-width: 250px;
+    }
+
+    .product-card h5{
+        font-size: 14px;
+        line-height: 21px;
+    }
+
+    .product-card p,
+    .product-card .btn-comp{
+        font-size: 12px;
+        line-height: 18px;
     }
 }
