--- a/src/components/ProductHeaderComponent/ProductHeaderComponent.css
+++ b/src/components/ProductHeaderComponent/ProductHeaderComponent.css
@@ -70,12 +70,43 @@
    =========================== */
 @media (max-width: 992px) {
   .product-header-section {
+    gap: 32px;
 
   .product-details {
     flex-wrap: wrap;
+    gap: 32px;
 
     .product-header-description {
       width: 100%;
+      gap: 24px;
+
+      .product-header-description-text {
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+
+        h4 {
+          font-size: 28px;
+          font-weight: 600;
+          line-height: 33.6px;
+        }
+
+        p {
+          font-size: 14px;
+          line-height: 21px;
+        }
+      }
+      /* ===========================
+         Subsection: Product Header Images
+         =========================== */
+      .product-header-images {
+        gap: 16px;
+
+        img {
+          width: 64px;
+          height: 64px;
+        }
+      }
     }
   }
 }
