fix scroll in width product description

--- a/src/components/ProductImageComponent/ProductImageComponent.css
+++ b/src/components/ProductImageComponent/ProductImageComponent.css
@@ -90,6 +90,9 @@
         .arrow-prev {
           left: -35px; 
         }
+        .arrow-next {
+          right: -35px; 
+        }
       }
     }
   }
