--- a/src/components/FooterComponent/FooterComponent.css
+++ b/src/components/FooterComponent/FooterComponent.css
@@ -43,9 +43,9 @@ footer ul:after,
 
 
 .title-footer{
-    font-size: 20px;
+    font-size: 28px;
     font-weight: 600;
-    line-height: 30px;
+    line-height: 33.6px;
     letter-spacing: 0;
     color: var(--gold26);
 }
@@ -54,9 +54,14 @@ footer ul:after,
 .ul-contact-info{
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 16px;
     align-items: start;
     justify-content: center;
+}
+
+.ul-site-map img{
+    width: 30px;
+    height: 30px;
 }
 
 .ul-site-map li,
@@ -70,9 +75,9 @@ footer ul:after,
 .ul-contact-info li span,
 form label{
     padding: 5px 0;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 400;
-    line-height: 21px;
+    line-height: 30px;
     letter-spacing: 0;
     color: var(--grey03);
 }
@@ -159,7 +164,7 @@ form label{
     border: 2px solid var(--gold26);
     border-radius: 8px;
     color: #fff;
-    font-size: 16px;
+    font-size: 20px;
 }
   
 .footer-col form input:focus,
@@ -180,9 +185,9 @@ form label{
     color: var(--black-color);
     border-radius: 8px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 600;
-    line-height: 21px;
+    line-height: 30px;
     letter-spacing: 0;
     border: none;
     transition: transform 0.3s ease; 
@@ -198,7 +203,43 @@ form label{
     transform: scale(1.05);
 }
 
-  @media(max-width: 992px){
+@media(max-width: 1919px){
+    .ul-site-map,
+    .ul-contact-info{
+        gap: 8px;
+    }
+
+    .ul-site-map img{
+        width: 20px;
+        height: 20px;
+    }
+
+    .title-footer{
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .ul-site-map li span,
+    .ul-contact-info li span,
+    form label{
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 21px;
+    }
+
+    .footer-col form input,
+    .footer-col form textarea {
+        font-size: 16px;
+    }
+
+    .footer-col form button {
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 21px;
+    }
+}
+
+@media(max-width: 992px){
     .footer-container{
         flex-wrap: wrap;
     }
@@ -206,5 +247,5 @@ form label{
     .footer-col{
         flex-basis: 100%;
     }
-  }
+}
   
