--- a/src/components/EventCardComponent/EventCardComponent.css
+++ b/src/components/EventCardComponent/EventCardComponent.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     padding: 1px;
     transition: all 0.3s ease;
+    max-width: 316px;
 }
 
  /* Increase shadow on hover effect */
@@ -58,6 +59,11 @@
 }
 
 @media(max-width:992px){
+    .event-card-border{
+        width: 100%;
+        max-width: 100%;
+    }
+
     .event-card{
         min-width: 256px;
     }
