--- a/src/components/CentersComponent/CentersComponent.css
+++ b/src/components/CentersComponent/CentersComponent.css
@@ -19,6 +19,11 @@
     text-align: start;
 }
 
+.centers-section .AA-title-heading{
+    font-size: 32px;
+    line-height: 38.4px;
+}
+
 .centers-section .center-cards{
     display: flex;
     justify-content: center;
@@ -27,3 +32,14 @@
     flex-wrap: wrap;
 }
 
+@media(max-width: 992px){
+    .centers-section .AA-title-heading{
+        font-size: 24px;
+    }
+
+    .centers-section .AA-title-desc{
+        font-size: 14px;
+    }
+
+
+}
