--- a/src/components/CentersComponent/CentersComponent.css
+++ b/src/components/CentersComponent/CentersComponent.css
@@ -17,11 +17,17 @@
 
 .centers-section .AA-title{
     text-align: start;
+    gap: 24px;
+    width: 50%;
 }
 
 .centers-section .AA-title-heading{
     font-size: 32px;
     line-height: 38.4px;
+}
+
+.centers-section .AA-title-desc{
+    padding: 0;
 }
 
 .centers-section .center-cards{
@@ -33,13 +39,16 @@
 }
 
 @media(max-width: 992px){
+    .centers-section .AA-title{
+    text-align: center;
+    width: 100%;
+}
     .centers-section .AA-title-heading{
         font-size: 24px;
     }
 
     .centers-section .AA-title-desc{
         font-size: 14px;
+        padding: 0;
     }
-
-
 }
