--- a/src/components/QualityComponent/QualityComponent.css
+++ b/src/components/QualityComponent/QualityComponent.css
@@ -12,8 +12,6 @@
     justify-content: space-between;
     align-items: center;
     gap: 110px;
-    padding-top: 40px ;
-    padding-bottom: 40px;
 }
 
 .quality-sec > .card-quality-sec:nth-child(even){
@@ -77,10 +75,27 @@
 }
 
 @media(max-width: 992px){
+    .quality-sec {
+        gap: 16px;
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
+
     .quality-sec .card-quality-sec{
         flex-wrap: wrap;
         align-items: start;
         justify-content: start;
+        gap: 24px;
+    }
+
+    .quality-sec .card-quality-sec .left-side{
+        height: 100%;
+        max-width: 100%;
+        width: 100%;
+    }
+
+    .quality-sec > .card-quality-sec:nth-child(even){
+        flex-direction: column;
     }
 
     .quality-sec .card-quality-sec .left-side .factory-image{
