--- a/src/components/SubHeroComponent/SubHeroComponent.css
+++ b/src/components/SubHeroComponent/SubHeroComponent.css
@@ -7,11 +7,8 @@
     padding-top: 64px;
 }
 
-.slick-slide{
+.sub-hero .slick-slide{
     position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding-bottom: 32px;
 }
 
@@ -30,7 +27,7 @@
     gap: 26px;
   }
 
-  .slick-slide .img-slide{
+  .sub-hero .slick-slide .img-slide{
     width: 100%;
     height: 100%;
   }
