add language for home page

--- a/src/components/HeroComponent/HeroComponent.css
+++ b/src/components/HeroComponent/HeroComponent.css
@@ -90,4 +90,12 @@
     min-height: 350px;
   }
 
+  .slider-content h3 {
+    text-align: center;
+  }
+
+  .slider-content p {
+    text-align: center;
+  }
+
 }
