--- a/src/components/AboutComponent/AboutComponent.css
+++ b/src/components/AboutComponent/AboutComponent.css
@@ -25,7 +25,7 @@
 
 .about-factory .card-about-factory .left-side .factory-image{
     height: 100%;
-    max-width: 770px;
+    width: 770px;
     border-radius: 28px;
     transition: transform 0.3s ease; 
 }
@@ -85,6 +85,10 @@
     
     .about-factory .card-about-factory{
         flex-wrap: wrap;
+    }
+
+    .about-factory .card-about-factory .left-side .factory-image{
+        width: 100%;
     }
 }
 
