--- a/src/components/InfoAboutComponent/InfoAboutComponent.css
+++ b/src/components/InfoAboutComponent/InfoAboutComponent.css
@@ -7,7 +7,7 @@
 .info-about-section .info-cards{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     gap: 64px;
 }
 
@@ -15,16 +15,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: stretch;
     gap: 16px;
+    max-width: 340px;
+    flex-basis: calc(33.3% - 64px);
 }
 
 .info-card p{
     font-weight: 400;
-    font-size: 20px;
-    line-height: 38.4px;
+    font-size: 28px;
+    line-height: 150%;
     color: var(--grey03);
     text-align: center;
+}
+
+@media(max-width: 1919px){
+    .info-card p{
+        font-size: 20px;
+        line-height: 38.4px;
+    }
 }
 
 @media(max-width: 992px){
